force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__AdjustmentMethod__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AdjustmentMethod__c</fullName>
    <label>Adjustment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Absolute</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
                <default>true</default>
                <label>Percent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>