force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__AlterationValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AlterationValue__c</fullName>
    <label>Alteration Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>