force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__CalculationMatrix__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CalculationMatrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculation Matrix</label>
    <referenceTo>vlocity_ps__CalculationMatrix__c</referenceTo>
    <relationshipLabel>Pricing Components</relationshipLabel>
    <relationshipName>PricingComponents</relationshipName>
    <type>Lookup</type>
</CustomField>