force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__CalculationType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CalculationType__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>Attribute Based</fullName>
            </value>
            <value>
                <fullName>Tier Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>