force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__FrequencyValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FrequencyValue__c</fullName>
    <label>Frequency Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>