force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__PriceSubType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PriceSubType__c</fullName>
    <label>Price Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Professional Installation / Installation</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>