force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__PricingCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PricingCode__c</fullName>
    <externalId>true</externalId>
    <label>Pricing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>