force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__RecurringFrequency__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RecurringFrequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>