force-app/main/default/objects/vlocity_ps__PricingComponent__c/fields/vlocity_ps__UsageUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__UsageUnitOfMeasure__c</fullName>
    <label>Usage Unit of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>