force-app/main/default/objects/vlocity_ps__PricingComponent__c/recordTypes/vlocity_ps__Alteration.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Alteration</fullName>
    <active>true</active>
    <label>Alteration</label>
</RecordType>