force-app/main/default/objects/vlocity_ps__PricingComponent__c/recordTypes/vlocity_ps__ChargeSpec.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__ChargeSpec</fullName>
    <active>true</active>
    <label>Charge Spec</label>
</RecordType>