force-app/main/default/objects/vlocity_ps__PricingComponent__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>vlocity_ps__SubType__c</columns>
    <columns>vlocity_ps__CalculationMatrix__c</columns>
    <columns>vlocity_ps__IsActive__c</columns>
    <columns>vlocity_ps__CalculationType__c</columns>
    <columns>vlocity_ps__Amount__c</columns>
    <columns>vlocity_ps__Description__c</columns>
    <columns>vlocity_ps__GlobalKey__c</columns>
    <columns>vlocity_ps__AlterationValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>